Fix spacing of document index page

--- a/app/assets/stylesheets/app/documents.scss
+++ b/app/assets/stylesheets/app/documents.scss
@@ -9,4 +9,7 @@ tr.hidden-folder, tr.hidden-document {
   i {
     font-size: 24pt;
   }
+  img {
+    height: 35px;
+  }
 }
